# FeuerNES

./: Cargo.toml  LICENSE  index.html  test.nes
res/: screen.fs  screen.vs
src/: bus.rs  cartridge.rs  cpu.rs  main.rs  mem.rs  opcode.rs  trace.rs  web_renderer.rs
src/cpu/: cpu.rs  instrutions.rs  mod.rs  opcode.rs  test.rs
src/cpu/instructions/: bitwise.rs  branch.rs  common.rs  compare.rs  jump.rs  memory.rs  mod.rs  stack.rs  status.rs  transfer.rs
src/ppu/: mod.rs
src/ppu/registers/: address.rs  controller.rs  data.rs  mask.rs  mod.rs  oam_address.rs  oam_data.rs  scroll.rs  status.rs
src/render/: mod.rs  web_renderer.rs
