[package]
name = "feuernes"
version = "0.1.0"
authors = ["EugenFeuer <eugenfeuerfeuer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
bitflags = "1.2.1"
rand = { version = "0.6.5", features = ["wasm-bindgen"] }
yew = "0.18.0"
gloo = "0.3.0"
wasm-bindgen = "0.2.75"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3.52"
features = [
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlRenderingContext',
  'WebGlShader',
  'WebGlUniformLocation',
  'WebGlTexture',
]